header alignment fix

--- a/src/styles/HeaderStyle.css
+++ b/src/styles/HeaderStyle.css
@@ -102,7 +102,7 @@ header .nav-link:hover {
 
 header .cart {
   position: relative;
-  top: -0.4375rem;
+  top: -0.1rem;
 }
 
 header .roundpoint {
